dev/test_programs/INVALID/group13/invalid_binary.go
package main

func main() {
	var a = 5 + ;
}